apps/n8n/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        homelab.dev/rollout-nonce: "2025-10-01-01"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: n8n
          imagePullPolicy: IfNotPresent
